fixed checkbox alignment for manga list category filters

--- a/static/css/apps/manga.less
+++ b/static/css/apps/manga.less
@@ -49,7 +49,8 @@
     padding: 10px 10px 0;
 }
 .mli-info {
-    padding: 10px;
+    padding: 10px 10px 5px;
+    > span { margin-bottom: 5px; }
 }
 
 /* --------------------------------------------------
@@ -131,6 +132,12 @@
     padding: 0 10px;
 
     &:first-of-type { .border-radius(@border-radius 0 0 @border-radius); }
+    > input[type="checkbox"] {
+        display: inline-block;
+        vertical-align: bottom;
+        position: relative;
+        top: -13px;
+    }
     > span { color: #fff; }
 }
 
